--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -20,7 +20,7 @@
         <ul>
 
             <li id="boas_vindas" class="texto_menu">
-                <h4 class="txt_link">Olá <span id="nome_usuario">USUÁRIO</span></h4>
+                <h4 class="txt_link">Olá, <span id="nome_usuario">USUÁRIO</span></h4>
             </li>
 
             <li class="item_menu ativo" id="bt_dados">
