--- a/public/login.html
+++ b/public/login.html
@@ -70,6 +70,7 @@
 
                   setTimeout(function () {
                       window.location = "./index.html";
+                      alert("Login realizado com sucesso");
                   }, 1000); // apenas para exibir o loading
 
               });
